hphp/hack/test/typecheck/reactive/test_method_call.php.exp
File "test_method_call.php", line 25, characters 3-12:
Cannot call mutable function on immutable expression (Typing[4214])
File "test_method_call.php", line 6, characters 19-24:
This function is marked <<__Mutable>>, so it has a mutable $this.
